# second-brain

cli/: Cargo.toml  rustfmt.toml
cli/src/: cli.rs  config.rs  main.rs
second-brain-agent/: .gitignore  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml
second-brain-agent/schema/: mcp-agent.config.schema.json
second-brain-agent/src/: agent.py  api.py  sql.py  sql_setup.py
second-brain-website/: components.json  package-lock.json  package.json  tailwind.config.ts
second-brain-website/src/: environment.d.ts
second-brain-website/src/app/: globals.css  layout.tsx  page.tsx  sign_in_page.tsx  sign_up_page.tsx
second-brain-website/src/app/api/chat/: route.ts
second-brain-website/src/app/api/info/: route.ts
second-brain-website/src/app/api/sign-up/: route.ts
second-brain-website/src/app/api/transcribe/: route.ts
second-brain-website/src/app/api/upload/: route.ts
second-brain-website/src/app/sign-in/: page.tsx
second-brain-website/src/app/sign-up/: page.tsx
second-brain-website/src/components/: action-panel.tsx  chat-interface.tsx  dashboard.tsx  file-uploader.tsx  live-recording.tsx  recent-uploads.tsx  text-editor.tsx  user-account-nav.tsx
second-brain-website/src/components/ui/: input.tsx  tabs.tsx  textarea.tsx
server/: .gitignore  main.py  pyproject.toml
server/src/: agent.py  app.py  config.py  constants.py
