[project]
name = "second-brain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv-python>=0.0.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "google-genai>=1.11.0",
    "mcp-agent>=0.0.17",
    "pydantic>=2.11.3",
]
