[project]
name = "second-brain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.8.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "google-genai>=1.11.0",
    "mcp-agent>=0.0.17",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "python-dotenv>=1.1.0",
]
